apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: apigateway:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: apigateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
  env:
  - name: MICROSERVICE_URL
    value: "http://microservice"
