tweetmanagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweetmanagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweetmanagement
  template:
    metadata:
      labels:
        app: tweetmanagement
    spec:
      containers:
      - name: tweetmanagement
        image: tweetmanagement:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tweetmanagement
spec:
  selector:
    app: tweetmanagement
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
