usermanagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermanagement
  template:
    metadata:
      labels:
        app: usermanagement
    spec:
      containers:
      - name: usermanagement
        image: usermanagement:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: usermanagement
spec:
  selector:
    app: usermanagement
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
